1. add filter to stageSummaryTable and taskSummaryTable when choosing a job; move chooseJob dropdown menu to header; change panel titles when jump from application page to job page; 2. format time gotton form server with d3 time; 3. refine layout, move stage/task/executor to bottom panel with whole width; 4. refine buttons, add bootstrap svg fonts(glyphicon); 5. fix data update bug: when select a new application in job list, remove cache in stage/task tables.

--- a/Utils/HDInsightNodeCommon/resources/htmlResources/hdinsight/job/html/indexpage.css
+++ b/Utils/HDInsightNodeCommon/resources/htmlResources/hdinsight/job/html/indexpage.css
@@ -45,18 +45,28 @@ body {
 #rightButtonPanel{
     float: right;
     margin-right: 10px;
+    margin-top: 10px;
+    vertical-align: middle;
 }
 
 #myTable, #taskSummary {
     font-size: 12px;
     padding: 8px;
     margin: 0px 20px 0 0;
-    height: 880px;
+    height: 300px;
 }
 #taskSummaryTable {
-    width:150px;
-    height:150px;
+    margin-bottom: 0;
     overflow:scroll;
+}
+#stageSummaryTable, #executorDetailsTable, #stage_detail_info_message {
+    margin-top: 5px;
+}
+#stage_detail_info_message {
+    width: 300px;
+    font-size: 11px;
+    text-align: left;
+    margin-left: 10px;
 }
 #job-details-info-table > tr {
     font-size: 6px;
@@ -65,10 +75,11 @@ body {
 }
 
 #myTable,
-#taskSummaryTable > tbody > tr > td,
-#taskSummaryTable,#job-details-info-table > thead > tr > th {
+#stageSummaryTable, #taskSummaryTable, #executorDetailsTable > tbody > tr > td,
+#stageSummaryTable, #taskSummaryTable, #executorDetailsTable, #job-details-info-table > thead > tr > th {
     text-align: center;
     font-size: 11px;
+    font-weight: 200;
     align-content: center;
 }
 #stored_rdd_info,
@@ -91,8 +102,9 @@ body {
     margin-left: 10px;
 }
 #rightButtonPanel button {
-    margin: 5px;
     font-size: 11px;
+    padding-top: 3px;
+    padding-bottom: 3px;
 }
 
 #basicInformationDIv {
@@ -109,11 +121,8 @@ body {
 }
 
 #basicInformationTable thead tr td {
-    font-size: 10px;
-    font-weight: bold;
-    text-align: left;
-    margin: 0;
-    padding: 0;
+    font-size: 15px;
+    margin-bottom: 8px;
 }
 
 #basicInformationTable tbody {
@@ -129,15 +138,14 @@ body {
 #basicInformationTable tbody > tr > td,
 #basicInformationTable tbody > tr > th {
     padding: 0px;
-    margin-left: 10px;
+    margin: 2px 5px 5px 15px;
     text-align: left;
     font-family: inherit;
-    font-size: 11px;
+    font-size: 12px;
     float: left;
 }
-
-#jobDetailDiv div {
-    margin: 10px 0 0 0;
+#myTabContent {
+    margin: 0;
     padding: 0;
 }
 
@@ -146,12 +154,28 @@ body {
     font-weight: bold;
 }
 
+.hdiPanel {
+    margin-top: 10px;
+}
+.hdi-dropdown-btn {
+    width: 160px;
+}
+.panelTitle {
+    font-weight: 200;
+    line-height: 1.4;
+    font-size: 18px;
+    color: #285e8e;
+    margin: 5px 0 5px 0;
+}
 .resultTextArea {
-    width: 95%;
+    width:100%;
+    height:100%;
+    line-height:normal;
     resize: none;
     background-color: #FFFFFF;
     font-size: 11px;
-    margin: 5px 15px 5px;
+    font-family: consolas,"courier new",monospace;
+    padding: 8px;
 }
 
 .table-striped#myTable tbody {
@@ -208,9 +232,11 @@ text {
 }
 /* end job details*/
 ul li {
-    font-size: 10px;
+    font-size: 12px;
 }
-
+.nav>li>a {
+    padding: 5px 10px;
+}
 #jobDetailsInfo {
     font-family: arial, sans-serif;
     border-collapse: collapse;
@@ -219,7 +245,6 @@ ul li {
 
 #jobDetailsInfo td, th {
     border: 1px solid #dddddd;
-    text-align: left;
     padding: 8px;
 }
 
